# dwg2geo-app

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
src/: lib.rs
web/: app.js  index.html  styles.css  worker.js
