[package]
name = "dwg2geo-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-browser DWG → GeoJSON conversion (WebAssembly) for the dwg2geo web app"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dwg2geo = { git = "https://github.com/milkway/dwg2geo", default-features = false, features = ["native-backend"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
